src/objects/HotelWingCode__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hotel wing codes</relationshipLabel>
        <relationshipName>Hotel_wing_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Hotel wing code</label>
    <nameField>
        <displayFormat>HWC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel wing codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>